--- a/html/index.html
+++ b/html/index.html
@@ -11,12 +11,12 @@
 
     <div class="menu">
         <div class="menu-image">
-            <img src="/assets/images/logoMK.jpg" alt="Logo Mortal Kombat">
+            <img src="../assets/images/logoMK.jpg" alt="Logo Mortal Kombat">
         </div>
         <div class="menu-options">
-            <p><a href="/html/game.html">Start</a></p>
-            <p><a href="/html/combos.html">Combos List</a></p>
-            <p><a href="/html/credits.html">Credits</a></p>
+            <p><a href="game.html">Start</a></p>
+            <p><a href="combos.html">Combos List</a></p>
+            <p><a href="credits.html">Credits</a></p>
         </div>
     </div>
 
